<resources>
    <string name="app_name">Automotive_UI</string>
    <string name="lbLogin">Login</string>
    <string name="txtUserName">Username</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogin">Sign In</string>
    <string name="p_btnPatientList">Patient List</string>
    <string name="btnLogout">Logout</string>
    <string name="doctorName" translatable="false">Dr. Anonymous</string>
    <string name="doctorType">Type: </string>
    <string name="doctorSpec">Speciality: </string>
    <string name="doctorTypeValue" translatable="false">Type Value</string>
    <string name="doctorSpecValue" translatable="false">Spec Value</string>
    <string name="doctorInfo" translatable="false">  Type: Physician\n\n
                                Specialty: Cardiology\n\n
                                Experience: 15 Years</string>
    <string name="btnParamedic">Paramedic Mode</string>
    <string name="lbPatientName">Patient Name</string>
    <string name="title_activity_patient_list" translatable="false">patient_list</string>

    <!-- Patient List -->
    <string name="patientList_TitleScreen">Patient List</string>
    <string name="patientList_BloodPressure">Blood Pressure</string>
    <string name="patientList_HeartRate">Heart Rate</string>
    <string name="patientList_oxygen">Oxygen</string>

    <!--- Patient_Information -->
    <string name="patientInfo_TitleScreen">Patient Information</string>
    <string name="patientInfo_Name">Name</string>
    <string name="patientInfo_Age">Age</string>
    <string name="patientInfo_Sex">Sex</string>
    <string name="patientInfo_EmergenContact">Emergency Contact:</string>
    <string name="patientInfo_Phone">Phone Number</string>
    <string name="patientInfo_History">Patient History</string>
    <string name="patientInfo_BloodPressure">Blood Pressure</string>
    <string name="patientInfo_HeartRate">Heart Rate</string>
    <string name="patientInfo_oxygen">Oxygen</string>

    <!--- Patient Information Recycler View -->
    <string name="hisDate">Date</string>
    <string name="hisDocNote">Doctor\'s Notes</string>

    <!-- Department Contacts -->
    <string name="departmentContact">Department Contact</string>

    <!-- Mapbox Token -->
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZW1lcmdlbnN1aSIsImEiOiJjazJ1dTR1aDQxYTkwM25tbnpjZnp6MXhkIn0.icc2BLwZFIRMw1OUCUdQ-g</string>
    <!-- Mapbox Strings -->
    <string name="user_location_permission_explanation">User location permission are required to utilize the map.</string>
    <string name="user_location_permission_not_granted">User has denied to give location permission.</string>


    <!-- Paramedic View -->
    <string name="speedviewLabel">Speedometer View</string>
    <string name="speedLabel">Speed:</string>
    <string name="patientInfoLabel">Patient Info</string>
    <string name="heartRateLabel">Heart Rate:</string>
    <string name="bloodPressureLabel">Blood Pressure:</string>
    <string name="oxygenLabel">Oxygen Saturation:</string>
    <string name="respirationLabel">Respiration:</string>
    <string name="backBtn">Back</string>
    <string name="mapBtn">Map</string>

    <!-- Navigation -->
    <string name="current_night_mode" translatable="false">current_night_mode</string>

    <!-- Navigation Header -->
    <string name="nav_header" translatable="false">Current Location</string>

    <!-- Sliding Item -->
    <string name="hos_name">Hospital Name</string>
    <string name="hos_address">Hospital Address </string>
    <string name="hos_phone">Hospital Phone</string>

    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Close</string>
    <string name="title_activity_google_map" translatable="false">Map</string>

</resources>
