<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/childCard">

    <LinearLayout
        android:id="@+id/subList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subLayout"
            app:layout_constraintTop_toTopOf="@+id/subList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/lblBloodPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientList_BloodPressure"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lblHeartRate"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.1"/>

            <TextView
                android:id="@+id/lblPatientBloodPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientInfo_BloodPressure"
                app:layout_constraintBottom_toTopOf="@id/lblPatientHeartRate"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintLeft_toLeftOf="@+id/subLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/lblHeartRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientList_HeartRate"
                app:layout_constraintBottom_toTopOf="@id/lblOxygen"
                app:layout_constraintHorizontal_bias="0.091"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblBloodPressure"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/lblPatientHeartRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientList_HeartRate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintLeft_toLeftOf="@+id/subLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblOxygen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientList_oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.086"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblHeartRate"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lblPatientOxygen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patientInfo_oxygen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintLeft_toLeftOf="@+id/subLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblPatientHeartRate"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>